# redirector-bot

./: .gitignore  Dockerfile  pyproject.toml
src/redirector/: consts.py  main.py  manager.py  messages.py
